--- a/src/Components/about/About.css
+++ b/src/Components/about/About.css
@@ -1,3 +1,36 @@
 #about {
-  background-color: greenyellow;
+  background-color: rgb(255, 255, 191);
+  height: 100vh;
+  margin: 0;
+}
+
+#about > h1 {
+  font-size: 50px;
+}
+
+.about-content {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+}
+
+@media (max-width: 800px) {
+  .about-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
+}
+
+#about > div > p {
+  padding: 20px;
+  font-size: 20px;
+}
+
+#about > div > img {
+  width: 40%;
+  height: 100%;
+  filter: drop-shadow(0 0 0.2rem black);
+  margin-left: 20px;
 }
