--- a/src/Components/home/Home.css
+++ b/src/Components/home/Home.css
@@ -1,5 +1,23 @@
 #home {
-  background-color: whitesmoke;
+  background-color: lightblue;
+  height: 100%;
+  position: relative;
+  z-index: 2;
+  margin: 0;
+}
+
+#home:after {
+  background: inherit;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 50%;
+  left: 0;
+  position: absolute;
+  right: 0;
+  transform: skewY(-1.5deg);
+  transform-origin: 100%;
+  z-index: -1;
 }
 
 #home h1 {
