--- a/src/Components/home/Home.css
+++ b/src/Components/home/Home.css
@@ -1,23 +1,19 @@
 #home {
-  background-color: lightblue;
-  height: 100%;
-  position: relative;
-  z-index: 2;
+  background: url("https://i.imgur.com/N9dkVfg.jpg") no-repeat center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: black;
+  height: 1400px;
+  width: 80vw;
+  /* z-index: 2; */
   margin: 0;
 }
 
-#home:after {
-  background: inherit;
-  bottom: 0;
-  content: "";
-  display: block;
-  height: 50%;
-  left: 0;
-  position: absolute;
-  right: 0;
-  transform: skewY(-1.5deg);
-  transform-origin: 100%;
-  z-index: -1;
+#home > div {
+  display: flex;
+  flex-direction: row;
 }
 
 #home h1 {
@@ -25,6 +21,8 @@
   margin: 0;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  /* transform: rotate(-50deg) skew(-5deg);
+  top: 0; */
 }
 
 #home h3 {
@@ -32,60 +30,4 @@
   font-family: "Montserrat", sans-serif;
   margin: 0;
   font-weight: 400;
-}
-
-.picture-block {
-  /* display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center; */
-  line-height: 0;
-
-  -webkit-column-count: 5;
-  -webkit-column-gap: 0px;
-  -moz-column-count: 5;
-  -moz-column-gap: 0px;
-  column-count: 5;
-  column-gap: 0px;
-}
-
-.picture-block img {
-  transition: 0.2s;
-  /* box-shadow: 0 8px 6px -6px black; */
-  width: 100%;
-  height: auto;
-}
-
-.picture-block img:hover {
-  transform: scale(1.05);
-}
-
-@media (max-width: 1200px) {
-  .picture-block {
-    -moz-column-count: 4;
-    -webkit-column-count: 4;
-    column-count: 4;
-  }
-}
-@media (max-width: 1000px) {
-  .picture-block {
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
-    column-count: 3;
-  }
-}
-@media (max-width: 800px) {
-  .picture-block {
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    column-count: 2;
-  }
-}
-@media (max-width: 400px) {
-  .picture-block {
-    -moz-column-count: 1;
-    -webkit-column-count: 1;
-    column-count: 1;
-  }
 }
