--- a/src/Components/resume/Resume.css
+++ b/src/Components/resume/Resume.css
@@ -1,5 +1,62 @@
 #resume {
   background-color: pink;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#resume > div {
+  width: 80%;
+  text-align: left;
+}
+
+.experience-container {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  /* margin: 10px 0 10px 0; */
+}
+
+.experience-container:hover {
+  transform: scale(1.01);
+}
+
+.experience-logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: rgb(255, 134, 134);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.experience-logo > img {
+  width: 60%;
+  height: auto;
+}
+
+.experience-section {
+  padding: 10px;
+  background-color: rgba(182, 144, 144, 0.221);
+  color: rgba(0, 0, 0);
+  border-radius: 0.5rem;
+  width: 80%;
+  min-height: 80%;
+  margin: 10px;
+}
+
+.experience-section:hover {
+  background-color: rgba(182, 144, 144, 0.5);
+}
+
+.experience-section > h3,
+.experience-section > h4,
+.experience-section > p {
+  margin: 5px;
 }
