--- a/src/Components/resume/Resume.css
+++ b/src/Components/resume/Resume.css
@@ -1,36 +1,50 @@
 #resume {
-  background-color: pink;
+  background-color: rgb(255, 189, 199);
   height: 100%;
   width: 100%;
   margin: 0;
-  display: flex;
+  /* padding: 0; */
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  align-items: center; */
 }
 
 #resume > div {
-  width: 80%;
-  text-align: left;
+  /* background-color: lightyellow; */
+  border-left: 2px solid blue;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .experience-container {
+  background-color: rgba(182, 144, 144, 0.221);
   width: 100%;
   height: 80%;
   display: flex;
   align-items: center;
-  flex-direction: row;
-  /* margin: 10px 0 10px 0; */
+  margin: 10px;
 }
 
 .experience-container:hover {
-  transform: scale(1.01);
+  transform: scale(1.002);
+}
+
+.experience-container:hover > .experience-section {
+  background-color: rgba(182, 144, 144, 0.6);
+}
+
+.experience-container:hover > .experience-logo {
+  background-color: rgb(255, 134, 134);
 }
 
 .experience-logo {
   width: 100px;
   height: 100px;
-  border-radius: 50%;
-  background-color: rgb(255, 134, 134);
+  border-radius: 40%;
+  background-color: rgb(254, 172, 172);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,10 +57,10 @@
 
 .experience-section {
   padding: 10px;
-  background-color: rgba(182, 144, 144, 0.221);
+  /* background-color: rgba(182, 144, 144, 0.221); */
   color: rgba(0, 0, 0);
   border-radius: 0.5rem;
-  width: 80%;
+  width: 100%;
   min-height: 80%;
   margin: 10px;
 }
