--- a/src/Components/about/About.css
+++ b/src/Components/about/About.css
@@ -1,6 +1,6 @@
 #about {
   background-color: rgb(255, 255, 191);
-  height: 100%;
+  height: 100vh;
   width: 100%;
   margin: 0;
 }
@@ -30,8 +30,8 @@
 }
 
 #about > div > img {
-  width: 40%;
-  height: 100%;
+  width: 100px;
+  height: 200px;
   filter: drop-shadow(0 0 0.2rem black);
   margin-left: 20px;
 }
