--- a/src/Components/recipes/Recipes.css
+++ b/src/Components/recipes/Recipes.css
@@ -9,6 +9,7 @@
   text-align: center;
   padding-bottom: 20px;
   font-size: 50px;
+  color: black;
 }
 
 .container {
@@ -19,7 +20,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: green;
+  /* background-color: rgba(62, 61, 61, 0.612); */
   margin: 0;
 }
 
