--- a/src/Components/home/Home.css
+++ b/src/Components/home/Home.css
@@ -6,7 +6,8 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  color: black;
+  color: #8601af;
+  text-shadow: 1px 1px 1px white;
   height: 1400px;
   width: 100%;
   margin: 0;
