--- a/src/Components/sidedrawer/SideDrawer.css
+++ b/src/Components/sidedrawer/SideDrawer.css
@@ -1,18 +1,31 @@
 .Sidebar {
   font-family: "Montserrat", sans-serif;
   background-color: lavender;
-  width: 300px;
+  width: 250px;
+  height: 100%;
   font-size: 30px;
   font-weight: 700;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-out;
+}
+
+.Sidebar.close {
+  display: none;
+}
+
+.Sidebar.open {
+  transform: translateX(0);
 }
 
 h1 {
   margin: 25px 0;
 }
 
-.Sidebar img {
-  width: 175px;
-  height: 235px;
+.Sidebar .sidebar-img {
+  /* width: 175px; */
+  width: 78%;
+  /* height: 235px; */
+  height: 80%;
   border-radius: 50%;
   transition: 0.3s;
   margin: 35px 0 30px 0;
@@ -22,7 +35,7 @@ h1 {
   /* background-color: rosybrown; */
 }
 
-.Sidebar img:hover {
+.Sidebar .sidebar-img:hover {
   transform: scale(1.1);
 }
 
@@ -90,4 +103,26 @@ ul > li > a.active {
 
 .social-media > div > a > p {
   display: none;
+}
+
+@media (max-width: 500px) {
+  .Sidebar {
+    width: 150px;
+  }
+
+  .Sidebar ul {
+    font-size: 20px;
+  }
+
+  .Sidebar ul li a {
+    padding: 0 5px;
+  }
+
+  .fa {
+    padding: 10px;
+    margin: 3px;
+    font-size: 20px;
+    width: 30px;
+    height: 30px;
+  }
 }
