--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -2,3 +2,8 @@
   display: grid;
   grid-template-columns: min-content 1fr;
 }
+
+main {
+  box-shadow: outset 0 20px 15px 20px black;
+  width: 100%;
+}
