--- a/src/Components/footer/Footer.css
+++ b/src/Components/footer/Footer.css
@@ -6,8 +6,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-  /* padding: 10px; */
+  align-items: flex-end;
 }
 
 #footer > h1 {
@@ -33,7 +32,9 @@
 .lena-image {
   padding: 0 !important;
   position: relative;
-  bottom: -13px;
+  bottom: 0px;
+  width: 150px;
+  height: 150px;
 }
 
 .bubble {
@@ -41,12 +42,12 @@
   display: flex;
   align-items: center;
   text-align: center;
-  width: 120px;
-  height: 120px;
+  width: 110px;
+  height: 105px;
   padding: 8px;
   background: #e3abab97;
-  -webkit-border-radius: 76px;
-  -moz-border-radius: 76px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
   border-radius: 50px;
   font-size: 17px;
   font-weight: bold;
@@ -61,6 +62,31 @@
   display: block;
   width: 0;
   z-index: 1;
-  right: -25px;
-  top: 45px;
+  right: -24px;
+  top: 42px;
+}
+
+@media (max-width: 500px) {
+  .lena-image {
+    bottom: 0px;
+    width: 109px;
+    height: 109px;
+  }
+
+  .bubble {
+    width: 95px;
+    height: 80px;
+    font-size: 12px;
+    border-radius: 50%;
+  }
+
+  .bubble:after {
+    right: -22px;
+    top: 25px;
+  }
+
+  #footer > h1 {
+    padding-left: 10px;
+    font-size: 10px;
+  }
 }
