--- a/src/Components/home/Home.css
+++ b/src/Components/home/Home.css
@@ -3,13 +3,13 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   color: #8601af;
   text-shadow: 1px 1px 1px white;
-  height: 1400px;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   margin: 0;
   padding: 0;
 }
