--- a/src/Components/footer/Footer.css
+++ b/src/Components/footer/Footer.css
@@ -2,16 +2,59 @@
   width: 100%;
   height: 25vh;
   background-color: rgb(233, 125, 125);
+  background-color: rgb(152, 172, 198);
   margin: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
+}
+
+#footer > .footer-links-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.footer-links {
+  color: white;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  width: 220px;
+  height: 100px;
+}
+
+.footer-links > div {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.footer-links > div > a {
+  color: rgb(72, 81, 91);
+  /* color: rgb(233, 125, 125); */
+  text-shadow: 0.5px 0.5px black;
+  font-size: 25px;
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
+}
+
+.footer-links > div > a:hover {
+  color: rgb(33, 47, 63);
 }
 
 #footer > h1 {
   padding-left: 10px;
   font-size: 20px;
+  color: rgb(44, 50, 57);
 }
 
 #footer > a {
@@ -59,24 +102,28 @@
   border-style: solid;
   border-width: 15px 0 15px 25px;
   border-color: transparent #e3abab97;
-  display: block;
   width: 0;
   z-index: 1;
-  right: -24px;
-  top: 42px;
+  right: -20px;
+  top: 30px;
 }
 
 @media (max-width: 500px) {
+  #footer {
+    height: 30vh;
+  }
+
   .lena-image {
     bottom: 0px;
-    width: 109px;
-    height: 109px;
+    width: 90px;
+    height: 90px;
+    position: relative;
   }
 
   .bubble {
-    width: 95px;
-    height: 80px;
-    font-size: 12px;
+    width: 80px;
+    height: 70px;
+    font-size: 10px;
     border-radius: 50%;
   }
 
@@ -88,5 +135,26 @@
   #footer > h1 {
     padding-left: 10px;
     font-size: 10px;
+  }
+
+  #footer > .footer-links-container {
+    height: 70%;
+    width: 100px;
+  }
+
+  .footer-links {
+    width: 100px;
+    height: 70px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer-links > div {
+    width: 60%;
+  }
+
+  .footer-links > div > a {
+    font-size: 10px;
+    padding: 1px;
   }
 }
