--- a/src/Components/home/Home.css
+++ b/src/Components/home/Home.css
@@ -3,13 +3,14 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-color: cornsilk;
   color: #8601af;
   text-shadow: 1px 1px 1px white;
-  height: 100vh;
-  width: 100vw;
+  height: 200vh;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
@@ -19,15 +20,12 @@
   flex-direction: row;
 }
 
-.static {
-  background-color: red;
-}
-
 #home h1 {
   font-size: 80px;
   margin: 0;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  z-index: 6;
 }
 
 #home h3 {
@@ -35,4 +33,21 @@
   font-family: "Montserrat", sans-serif;
   margin: 0;
   font-weight: 400;
+}
+
+#home h3,
+#home h1,
+#home p {
+  padding-left: 10px;
+}
+
+@media (max-width: 500px) {
+  #home h1,
+  #home h3 {
+    font-size: 30px;
+  }
+
+  #home h1 {
+    padding-top: 40px;
+  }
 }
