--- a/src/Components/sidedrawer/SideDrawer.css
+++ b/src/Components/sidedrawer/SideDrawer.css
@@ -5,8 +5,11 @@
   height: 100%;
   font-size: 30px;
   font-weight: 700;
-  transform: translateX(-100%);
-  transition: transform 0.3s ease-out;
+  box-shadow: 3px 0 5px rgba(0, 0, 0, 0.2);
+  /* transform: translateX(-100%); */
+  /* transition: transform 0.3s ease-out; */
+  /* position: fixed; */
+  z-index: 200;
 }
 
 .Sidebar.close {
@@ -23,16 +26,15 @@ h1 {
 
 .Sidebar .sidebar-img {
   /* width: 175px; */
-  width: 80%;
+  width: 72%;
   /* height: 235px; */
-  height: 80%;
+  height: 70%;
   border-radius: 50%;
   transition: 0.3s;
   margin: 35px 0 30px 0;
   padding: 3px;
   border: 4px solid rgb(51, 54, 146);
   background-color: rgb(255, 134, 134);
-  /* background-color: rosybrown; */
 }
 
 .Sidebar .sidebar-img:hover {
@@ -107,7 +109,7 @@ ul > li > a.active {
 
 @media (max-width: 500px) {
   .Sidebar {
-    width: 150px;
+    width: 250px;
   }
 
   .Sidebar ul {
