--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -3,6 +3,11 @@
   grid-template-columns: min-content 1fr;
 }
 
+.App-new {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
 main {
   box-shadow: outset 0 20px 15px 20px black;
   width: 100%;
