update mobile responsive sidebar

--- a/src/Components/Sidenav/Sidenav.css
+++ b/src/Components/Sidenav/Sidenav.css
@@ -91,3 +91,9 @@ ul > li > a.active {
 .social-media > div > a > p {
   display: none;
 }
+
+@media (max-width: 800px) {
+  .Sidebar {
+    display: none;
+  }
+}
