--- a/src/Components/Sidenav/Sidenav.css
+++ b/src/Components/Sidenav/Sidenav.css
@@ -1,9 +1,22 @@
 .Sidebar {
   font-family: "Montserrat", sans-serif;
-  background-color: lavender;
   width: 300px;
   font-size: 30px;
   font-weight: 700;
+  position: relative;
+  background-color: rgb(245, 230, 203);
+}
+
+.Sidebar::after {
+  content: "";
+  background: url("https://i.imgur.com/DHAhvAq.png?1");
+  opacity: 0.5;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
 }
 
 h1 {
@@ -16,10 +29,10 @@ h1 {
   border-radius: 50%;
   transition: 0.3s;
   margin: 35px 0 30px 0;
-  padding: 3px;
-  border: 4px solid rgb(51, 54, 146);
-  background-color: rgb(255, 134, 134);
-  /* background-color: rosybrown; */
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
 .Sidebar .sidebar-img:hover {
