--- a/src/Components/about/About.css
+++ b/src/Components/about/About.css
@@ -1,18 +1,42 @@
 #about {
   background-color: rgb(250, 209, 215);
-  height: 100%;
+  height: 100vh;
   width: 100%;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 #about > h1 {
   font-size: 50px;
+  text-align: center;
 }
 
 .about-content {
+  width: 75%;
   display: flex;
-  flex-direction: row;
-  padding: 10px;
+  flex-direction: column;
+}
+
+.about-content p {
+  background-color: rgb(250, 221, 227);
+  border-radius: 5px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.034), 0 1px 1px rgba(0, 0, 0, 0.048),
+    0 1px 1px rgba(0, 0, 0, 0.06), 0 2px 2px rgba(0, 0, 0, 0.072),
+    0 1px 1px rgba(0, 0, 0, 0.086), 0 5px 5px rgba(0, 0, 0, 0.12);
+  /* -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 10px 6px -6px #777;
+  box-shadow: 0 7px 3px -8px #777; */
+}
+
+.about-content p:hover {
+}
+
+.hobbies {
+  width: 80%;
+  align-self: center;
 }
 
 @media (max-width: 800px) {
@@ -29,9 +53,15 @@
   font-size: 20px;
 }
 
-#about > div > img {
-  width: 100px;
-  height: 200px;
-  filter: drop-shadow(0 0 0.2rem black);
-  margin-left: 20px;
+.underline-about {
+  width: 80px;
+  height: 5px;
+  background-color: rgb(255, 134, 134);
+  margin: 0 auto 20px auto;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
+  -ms-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
 }
