--- a/src/Components/about/About.css
+++ b/src/Components/about/About.css
@@ -1,6 +1,6 @@
 #about {
   background-color: rgb(250, 209, 215);
-  height: 100vh;
+  height: 100%;
   width: 100%;
   margin: 0;
   display: flex;
@@ -23,6 +23,9 @@
 .about-content p {
   background-color: rgb(250, 221, 227);
   border-radius: 5px;
+  margin-top: 30px;
+  padding: 20px;
+  font-size: 20px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.034), 0 1px 1px rgba(0, 0, 0, 0.048),
     0 1px 1px rgba(0, 0, 0, 0.06), 0 2px 2px rgba(0, 0, 0, 0.072),
     0 1px 1px rgba(0, 0, 0, 0.086), 0 5px 5px rgba(0, 0, 0, 0.12);
@@ -31,26 +34,13 @@
   box-shadow: 0 7px 3px -8px #777; */
 }
 
-.about-content p:hover {
-}
-
 .hobbies {
   width: 80%;
   align-self: center;
 }
 
-@media (max-width: 800px) {
-  .about-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-  }
-}
-
-#about > div > p {
-  padding: 20px;
-  font-size: 20px;
+.cat-dog {
+  width: 100%;
 }
 
 .underline-about {
@@ -64,4 +54,14 @@
   -o-transition: all 0.3s ease-in;
   -ms-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
+}
+
+@media (max-width: 800px) {
+  .about-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2px;
+    width: 90%;
+  }
 }
