--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -1,10 +1,11 @@
 .App {
   display: grid;
   grid-template-columns: min-content 1fr;
+  box-sizing: border-box;
 }
 
 main {
-  width: 100%;
+  width: 100vw;
 }
 
 @media (max-width: 800px) {
