--- a/src/Components/footer/Footer.css
+++ b/src/Components/footer/Footer.css
@@ -120,12 +120,13 @@
   width: 110px;
   height: 105px;
   padding: 8px;
-  background: #e3abab97;
+  background: #e3abab;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   border-radius: 50px;
   font-size: 17px;
   font-weight: bold;
+  z-index: 5;
 }
 
 .bubble:after {
@@ -133,7 +134,7 @@
   position: absolute;
   border-style: solid;
   border-width: 15px 0 15px 25px;
-  border-color: transparent #e3abab97;
+  border-color: transparent #e3abab;
   width: 0;
   z-index: 1;
   right: -20px;
@@ -232,7 +233,7 @@
 
 @media (max-width: 800px) {
   #footer {
-    height: 45vh;
+    height: 52vh;
   }
 
   .footer-left > h1 {
@@ -346,8 +347,9 @@
   }
 
   .bubble::after {
-    right: -23px;
-    top: 22px;
+    right: -18px;
+    top: 25px;
+    border-width: 10px 0 10px 20px;
   }
 
   .footer-left > h1 {
