update contact section

--- a/src/Components/Sidenav/Sidenav.css
+++ b/src/Components/Sidenav/Sidenav.css
@@ -1,6 +1,6 @@
 .Sidebar {
   font-family: "Montserrat", sans-serif;
-  width: 300px;
+  width: 100%;
   font-size: 30px;
   font-weight: 700;
   position: relative;
