--- a/src/Components/about/About.css
+++ b/src/Components/about/About.css
@@ -1,8 +1,9 @@
 #about {
   background-color: rgb(250, 209, 215);
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  margin: 0;
+  margin: 0 !important;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
