--- a/src/Components/about/About.css
+++ b/src/Components/about/About.css
@@ -1,6 +1,6 @@
 #about {
   background-color: rgb(250, 209, 215);
-  height: 100vh;
+  height: 100%;
   width: 100%;
   margin: 0 !important;
   padding: 0;
