--- a/src/Components/contact/Contact.css
+++ b/src/Components/contact/Contact.css
@@ -5,7 +5,8 @@
   height: 100vh;
   width: 100%;
   margin: 0;
-  padding: 0;
+  padding: 50px 0 50px 0;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -30,14 +31,16 @@
   transition: 0.5s;
 }
 
-.transparent {
-  position: absolute;
+/* .transparent {
   content: "";
-  width: 75%;
-  height: 100vh;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 1;
-}
+} */
 
 #contact h1 {
   text-align: center;
