--- a/src/Components/footer/Footer.css
+++ b/src/Components/footer/Footer.css
@@ -3,7 +3,7 @@
   height: 60vh;
   background-color: rgb(108, 106, 106);
   margin: 0;
-  padding: 0 !important;
+  padding: 20px 0 0 0 !important;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
