--- a/src/Components/recipes/Recipes.css
+++ b/src/Components/recipes/Recipes.css
@@ -4,7 +4,7 @@
   height: 100%;
   width: 100%;
   margin: 0;
-  padding: 0;
+  padding: 20px 0 80px 0;
 }
 
 #recipes > .underline {
@@ -36,6 +36,62 @@
   color: rgb(249, 233, 233);
 }
 
+.inspirations {
+  width: 100%;
+  height: 450px;
+  background-color: rgb(60, 43, 63);
+  margin-bottom: 50px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: space-between;
+}
+
+.inspirations > .inspirations-text {
+  width: 75%;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  line-height: 3rem;
+}
+
+.cookbooks {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  padding-top: 30px;
+}
+
+.inspirations:hover .cookbook1 {
+  transform: rotate(-20deg);
+  left: 35%;
+}
+
+.inspirations:hover .cookbook2 {
+  transform: rotate(20deg);
+  left: 38%;
+}
+
+.cookbook1 {
+  width: 158px;
+  height: auto;
+  position: relative;
+  z-index: 5;
+  left: 40%;
+  transform: rotate(-10deg);
+}
+
+.cookbook2 {
+  position: relative;
+  width: 158px;
+  left: 35%;
+  height: 196.28px;
+  transform: rotate(10deg);
+  z-index: 4;
+}
+
 .container {
   width: 100%;
   top: 60px;
@@ -44,7 +100,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  /* background-color: rgba(62, 61, 61, 0.612); */
   margin: 0;
 }
 
@@ -61,10 +116,6 @@
   left: 0px;
 }
 
-/* .card:not(:first-child) {
-  margin-left: -50px;
-} */
-
 .card:hover {
   transform: translateY(-20px);
   transition: 0.4s ease-out;
@@ -76,18 +127,22 @@
   transition: 0.4s ease-out;
 }
 
-.title {
-  color: white;
-  font-weight: 300;
-  position: absolute;
-  left: 20px;
-  top: 15px;
+.food-image:hover {
+  opacity: 0.4;
 }
 
 .link {
-  color: white;
-  font-weight: 300;
+  color: rgb(255, 134, 134);
+  font-weight: 600;
+  font-size: 30px;
   position: absolute;
   left: 20px;
-  top: auto;
+  top: 15px;
+  text-decoration: none;
+  cursor: pointer;
+  display: none;
+}
+
+.card:hover > .link {
+  display: block;
 }
