--- a/src/Components/contact/Contact.css
+++ b/src/Components/contact/Contact.css
@@ -100,8 +100,9 @@
   justify-content: space-between;
 }
 
-.button-contact {
-  background-color: rgb(0, 131, 131);
+.button-contact,
+.button-sent,
+.button-reset {
   color: white;
   border-radius: 5px;
   width: 120px;
@@ -111,38 +112,49 @@
   border: none;
   outline: none;
   cursor: pointer;
+}
+
+.button-contact {
+  background-color: rgb(0, 131, 131);
+}
+
+.button-sent {
+  background-color: rgb(22, 155, 22);
 }
 
 .button-contact:hover {
   background-color: rgb(0, 147, 147);
 }
 
-.button-sent {
-  background-color: rgb(22, 155, 22);
-  font-style: bold;
-  border-radius: 5px;
-  width: 60%;
-  height: 50px;
-  font-size: 20px;
-  margin-top: 10px;
-  color: white;
-  pointer-events: none;
-  border: none;
-  outline: none;
-}
-
 .button-reset {
   background-color: rgb(228, 72, 72);
-  border: none;
-  border-radius: 5px;
-  width: 120px;
-  height: 50px;
-  color: white;
-  font-size: 15px;
-  margin-top: 10px;
-  cursor: pointer;
 }
 
 .button-reset:hover {
   background-color: rgb(233, 112, 112);
+}
+
+@media (max-width: 880px) {
+  #contact > h1 {
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 550px) {
+  #contact > h1 {
+    font-size: 40px;
+  }
+
+  .button-contact,
+  .button-reset {
+    width: 110px;
+    height: 40px;
+    font-size: 13px;
+  }
+}
+
+@media (max-height: 550px) {
+  #contact {
+    height: 100%;
+  }
 }
