--- a/src/Components/resume/Resume.css
+++ b/src/Components/resume/Resume.css
@@ -2,8 +2,8 @@
   background-color: rgb(249, 227, 230);
   height: 100%;
   width: 100%;
-  margin: 0 auto;
-  padding: 0;
+  margin: 0;
+  padding: 0 !important;
 }
 
 .work:hover > .underline-work,
@@ -15,7 +15,8 @@
 #resume > div > h1 {
   text-align: center;
   font-size: 50px;
-  margin: 20px auto 5px auto;
+  margin: 0 auto 5px auto;
+  padding-top: 50px;
 }
 
 .underline-work,
@@ -100,11 +101,11 @@
 
 @media (max-width: 1000px) {
   .timeline::after {
-    left: 50px;
+    left: 30px;
   }
 
   .experience-container {
-    width: 100%;
+    width: 80%;
     padding-left: 70px;
     padding-right: 25px;
   }
@@ -170,4 +171,10 @@
 .experience-section > h4,
 .experience-section > p {
   margin: 5px;
+}
+
+@media (max-width: 500px) {
+  .experience-container {
+    width: 75%;
+  }
 }
