--- a/src/Components/recipes/Recipes.css
+++ b/src/Components/recipes/Recipes.css
@@ -38,10 +38,10 @@
 
 .inspirations {
   width: 100%;
-  height: 450px;
+  height: 30%;
   background-color: rgb(60, 43, 63);
   margin-bottom: 50px;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -77,7 +77,7 @@
 
 .cookbook1 {
   width: 158px;
-  height: auto;
+  height: 196.28px;
   position: relative;
   z-index: 5;
   /* left: 40%; */
@@ -146,4 +146,11 @@
 
 .card:hover > .link {
   display: block;
+}
+
+@media (max-width: 500px) {
+  .inspirations > .inspirations-text {
+    width: 80%;
+    font-size: 15px;
+  }
 }
